# AML_MiniProject

./: .gitattributes  .gitignore  AI Text Detection.ipynb  README.md  environment.yaml  pyproject.toml
.ipynb_checkpoints/: AI Text Detection-checkpoint.ipynb
HPC_Files/: clean.job  hpc_clean.py  hpc_train.py  train.py
ana_hpc_scripts/jobs/: env.slurm  evaluation_base.slurm  evaluation_roberta.slurm  preprocessing.slurm  train_base_model.slurm  train_base_model_cpu.slurm  train_roberta.slurm
ana_hpc_scripts/logs/errors/: eval_roberta_51436.err  preprocessing_46088.err  preprocessing_46091.err  preprocessing_46148.err  preprocessing_46187.err  preprocessing_46188.err  preprocessing_46190.err  preprocessing_46387.err  preprocessing_46390.err  preprocessing_49767.err  train_base_mode_49776.err
ana_hpc_scripts/logs/outputs/: eval_roberta_51436.out  preprocessing_49767.out  train_base_model_49776.out  train_roberta_50854.out
hpc_slurms/logs/outputs/: env_50145.out
outputs/: analysis.ipynb
outputs/checkpoints/bert_full/checkpoint-149436/: rng_state.pth  scaler.pt  scheduler.pt  trainer_state.json
outputs/checkpoints/bert_full/checkpoint-224154/: rng_state.pth  scaler.pt  scheduler.pt  trainer_state.json
outputs/checkpoints/bert_full/checkpoint-74718/: rng_state.pth  scaler.pt  scheduler.pt  trainer_state.json
outputs/checkpoints/roberta_full/checkpoint-149436/: model.safetensors  optimizer.pt  scaler.pt  (+3 more)
outputs/metrics/: bert_full_eval_metrics.json  bert_full_history.json  bert_local_run.json  distil_local_history.json  roberta_full_history.json
src/: data_preprocessing.py  evaluate.py  model.py  train.py  train_torch.py
(+13 files in other folders)
