[project]
name = "AML_Mini_Project"
version = "0.1.0"
dependencies = [
    "numpy>=1.22.4,<2.0.0",
    "pandas>=1.4.0",
    "matplotlib",
    "scikit-learn",
    "tensorflow-gpu==2.10.0", #switch to tensorflow for local development
    "datasets",
    "transformers",
    "tf-keras",
    "typing"
]

readme = "README.md"