[project]
name = "AML_Mini_Project"
version = "0.1.2"
dependencies = [
       "tensorflow==2.15.*",
       "keras==2.15.*",
       "transformers>=4.37",   # old 4.25 has bugs with TF-Keras ≥ 2.10
       "datasets",
       "numpy>=1.22.4,<2.0.0",
       "pandas>=1.4.0",
       "matplotlib",
       "scikit-learn"
       ]

readme = "README.md"