[project]
name = "AML_Mini_Project"
version = "0.1.2"
description = "PyTorch-based sequence classification project"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "transformers[torch]>=4.41",                      
    "datasets>=3.5.1",
    "evaluate==0.4.3",
    "numpy>=1.22.4,<2.0.0",
    "pandas>=1.4.0",
    "matplotlib>=3.10.0",
    "scikit-learn>=1.3.0",
    "seaborn",
    "nltk",
    "tqdm",
    "huggingface-hub>=0.30.0",
    "tokenizers>=0.21.1",
    "fsspec",
    "pyarrow",
    "click",
    "pydantic>=2.11.4",
    "orjson",
    "loguru",
    "langchain==0.3.24",
    "langsmith==0.3.38",
    "typing-inspect",
    "regex",
    "aiohttp",
    "requests",
    "scipy>=1.11.0",
    "tenacity",
    "multiprocess",
    "sympy",
    "dill",
    "dataclasses-json",
    "markdown",
    "rouge-score"
]
